l10n: ml, translation updates by Ani Peter
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106842 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ml/main.lang
+++ b/ml/main.lang
@@ -363,42 +363,41 @@ Firefox നവീന ഭാവത്തില്‍... കണ്ടറിയൂ.
 
 
 ;Email
-Email
+ഈമെയില്‍
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Bringing the modern Web to XP.
+മോസില്ലാ ഫയര്‍ഫോക്സ്. ആധുനിക വെബിനെ എക്സ്പിയിലേക്കു് ലഭ്യമാക്കുന്നു.
 
 
 ;Super speed
-Super speed
-
+അടിപൊളി വേഗത
 
 ;Stunning graphics
-Stunning graphics
+അടിപോളി ഗ്രാഫിക്സ്
 
 
 ;The latest technologies
-The latest technologies
+ഏറ്റവും പുതിയ ടെക്നോളജികള്‍
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+നിങ്ങള്‍ ഉപയോഗിയ്ക്കുന്നതു് ഫയര്‍ഫോക്സിന്റെ പഴയ പതിപ്പാകുന്നു. സുരക്ഷിതമായി നില്‍ക്കുന്നതിനായി ഏറ്റവും പുതിയതിലേക്കു് പരിഷ്കരിയ്ക്കുക! ഏറ്റവും പുതിയ വിശേഷതകള്‍ക്കും, വേഗതയ്ക്കും സുരക്ഷാ പരിഹാരങ്ങള്‍ക്കുമായി ഒരു മിനിറ്റിനുള്ളില്‍  <br/> <a href="%s">സൌജന്യമായ പരിഷ്കരണം ഡൌണ്‍ലോഡ് ചെയ്യുക</a>.
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+നിങ്ങള്‍ക്കൊരു പരിഷ്കരണം ആവശ്യമുണ്ടു്! ഒരു മിനിറ്റില്‍ എല്ലാം ലഭ്യമാക്കുക. <br/>ഏറ്റവും ഉത്തമമായ ബ്രൌസിങിനായി പുതിയ ഫയര്‍ഫോക്സ് ഉപയോഗിയ്ക്കുക. <br/>   ഇതു് സൌജന്യമാകുന്നു!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+ഫയര്‍ഫോക്സിന്റെ പഴയ പതിപ്പാണു് നിങ്ങളുപയോഗിയ്ക്കുന്നതു്. സുരക്ഷിതമായി നില്‍ക്കുന്നതിനായി  <a href="%s">നിങ്ങളുടെ പരിഷ്കരണം</a> ലഭ്യമാക്കുക! <br/> ഏറ്റവും പുതിയ ഫയര്‍ഫോക്സ് ഉപയോഗിച്ചു് നോക്കുക. ഒരു മിനിറ്റിനുള്ളില്‍ സൌജന്യ പരിഷ്കരണം ഡൌണ്‍ലോഡ് ചെയ്യുക.
 
 
 ;Upgrade now
-Upgrade now
+ഉടന്‍ പരിഷ്കരിയ്ക്കുക
 
 
 ;Update now
-Update now
+ഉടന്‍ പുതുക്കുക
 
 
