--- a/ml/snippets.lang
+++ b/ml/snippets.lang
@@ -2,31 +2,31 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now.</a>
+നിങ്ങളോടൊപ്പം ഫയര്‍ഫോക്സ് കൊണ്ടു് നടക്കുക! ആന്‍ഡ്രോയിഡിനുള്ള ഏറ്റവും പുതിയ ഫയര്‍ഫോക്സ് <a href="%s">ഉടന്‍ ലഭ്യമാക്കുക.</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
+നിങ്ങള്‍ക്കിപ്പോള്‍ ഫയര്‍ഫോക്സിന്റെ ഏറ്റവും പുതിയ പതിപ്പു് ലഭ്യമായിരിയ്ക്കുന്നു, ഫയര്‍ഫോക്സ് ഉപയോഗിച്ചു് <a href="%s">എന്തെല്ലാം കാര്യങ്ങള്‍ ചെയ്യാന്‍ സാധിയ്ക്കുമെന്നു് പഠിയ്ക്കുക</a>.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
+ഫയര്‍ഫോക്സിന്റെ ഏറ്റവും പുതിയ പതിപ്പു് നിങ്ങളുടെ പക്കലില്ല. വെബിന്റെ ഏറ്റവും മെച്ചപ്പെട്ടതു് കിട്ടുന്നതിനായി <a href="%s">ഉടന്‍ പരിഷ്കരിയ്ക്കുക</a>!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-Get the latest Firefox features first in <a href="%s">Aurora</a>.
+ഏറ്റവും പുതിയ ഫയര്‍ഫോക്സ് വിശേഷതകള്‍ ആദ്യം <a href="%s">അറോറയില്‍</a> കാണുക.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
-Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
+ഫയര്‍ഫോക്സിന്റെ ഭാവിയിലേക്കു് ഒരു തിരനോട്ടം. <a href="%s">ഫയര്‍ഫോക്സ് അറോറാ ഡൌണ്‍ലോഡ് ചെയ്തു്</a> ഏറ്റവും പുതിയ വിശേഷതകള്‍ പരീക്ഷിയ്ക്കുക.
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
+ഫയര്‍ഫോക്സിനു് മുമ്പു് ബീറ്റാ, ബീറ്റായ്ക്കു് മുമ്പു് അറോറാ. ഏറ്റവും പുതിയ വിശേഷതകള്‍ക്കായി <a href="%s">ഫയര്‍ഫോക്സ് അറോറാ ഉപയോഗിച്ചു് നോക്കുക</a>.
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
-<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
+<a href="%s">ഫയര്‍ഫോക്സിന്റെ ഭാഗമായി</a> അതു് മറ്റുള്ളവരുമായി പങ്കിടുവാനുള്ള വിവരങ്ങള്‍ ലഭ്യമാക്കുക!
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
@@ -38,39 +38,39 @@ Fast, flexible and secure, Firefox is the only browser that puts you first. <a h
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s">നിങ്ങളുടെ ആന്‍ഡ്രോയിഡ് ടാബ്ലറ്റിലേക്കു് ഫയര്‍ഫോക്സ് ഡൌണ്‍ലോഡ് ചെയ്തു്</a> വെബ് പരമാവധി ഉപയോഗിയ്ക്കുക. ഉടന്‍ ലഭ്യമാക്കുക.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+നിങ്ങളുടെ പ്ലഗിനുകള്‍ പരിഷ്കരിച്ചു്, <a href="%s">പ്ലഗിന്‍ പരിശോധന</a> മുഖേന സുരക്ഷിതമായിരിയ്ക്കുക.
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
-Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
+നിങ്ങളുടെ ഫയര്‍ഫോക്സ് അടിപൊളിയാക്കുക. ഏറ്റവും പുതിയ <a href="%s">പേഴ്സോണകള്‍</a> ഉപയോഗിച്ചു് തയ്യാറാക്കുക.
 
 
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
-Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
+ഒരുപാടു് റ്റാബുകള്‍? <a href="%s">പനോരമ</a> ഉപയോഗിച്ചു് നിങ്ങളുടെ ബ്രൌസര്‍ സജ്ജമാക്കുക.
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
+ഒരിക്കലും രണ്ടു് ഫയര്‍ഫോക്സ് ഉപയോക്താക്കള്‍ ഒരുപോലെയല്ല.  <a href="%s">നിങ്ങളുടെ ബ്രൌസറിലേക്കു് ഏതെങ്കിലും ബട്ടണ്‍ ചേര്‍ക്കുക</a> അല്ലെങ്കില്‍ നിങ്ങളുപയോഗിയ്ക്കാത്തതു് നീക്കം ചെയ്യുക. ആസ്ഥാനത്തു് റൈറ്റ്-ക്ലിക്ക് ചെയ്തു് യഥേഷ്ടമാക്കുക തെരഞ്ഞെടുക്കുക.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
+പേഴ്സോണകള്‍ ഉപയോഗിച്ചു് നിങ്ങളുടെ ഫയര്‍ഫോക്സ് തയ്യാറാക്കുക. ഇതിന്റെ മുകളിലൂടെ മൌസ് ഓടിച്ചു് നോക്കി, ലഭ്യമാക്കുന്നതിനായി ക്ലിക്ക് ചെയ്യുക. കൂടുതല്‍ പേഴ്സോണകള്‍ക്കായി <a href="%s">ഗ്യാലറി</a> കാണുക!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+ബീറ്റയിലേക്കു് പോകുന്നതിനു് മുമ്പു് പുതിയ വിശേഷതകള്‍ കാണുക. <a href="%s">ഫയര്‍ഫോക്സ് അറോറാ ഡൌണ്‍ലോഡ് ചെയ്യുക.</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
-<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
+ബീറ്റയ്ക്കു് ആവശ്യമായി വിശേഷതകള്‍ പരീക്ഷിയ്ക്കുന്നതിനായി <a href="%s">ഫയര്‍ഫോക്സ് അറോറാ ഡൌണ്‍ലോഡ് ചെയ്യുക</a>.
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
+ഫയര്‍ഫോക്സിന്റെ ഭാവി സജ്ജമാക്കുക. <a href="%s">ഫയര്‍ഫോക്സ് അറോറാ ഡൌണ്‍ലോഡ് ചെയ്യുക.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
@@ -78,70 +78,70 @@ Firefox for Android is now optimized for the way you browse on tablets. <a href=
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+നിങ്ങളുടെ ആന്‍ഡ്രോയിഡ് ടാബ്ലറ്റിലേക്കു് ഫയര്‍ഫോക്സ് ഡൌണ്‍ലോഡ് ചെയ്തു് വെബ് പരമാവധി ഉപയോഗിയ്ക്കുക. <a href="%s">ഉടന്‍ ലഭ്യമാക്കുക</a>.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">ഫയര്‍ഫോക്സ് ബീറ്റാ ഡൌണ്‍ലോഡ് ചെയ്തു്</a>, അഭിപ്രായങ്ങള്‍ നല്‍കുക. അനവധി ഉപയോക്താക്കള്‍ക്കു് ഫയര്‍ഫോക്സ് ഉപയോഗപ്രദമാക്കുന്നതിനായി ഇതു് സഹായിയ്ക്കുന്നു.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+വിശേഷതകള്‍ പരീക്ഷിച്ചു്, അടുത്ത പതിപ്പു് ഏറ്റവും ഉത്തമമാക്കുക. <a href="%">ഉടന്‍ ഫയര്‍ഫോക്സ് ബീറ്റാ ഡൌണ്‍ലോഡ് ചെയ്യുക!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+ഫയര്‍ഫോക്സ് ഇഷ്ടമോ? അടുത്ത പതിപ്പു് ഉത്തമമാക്കണമോ? <a href="%">ഫയര്‍ഫോക്സ് ബീറ്റാ ഡൌണ്‍ലോഡ് ചെയ്തു്</a> ഇന്നു് തന്നെ അഭിപ്രായം അറിയിയ്ക്കുക!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+ഏറ്റവും പുതിയ ഫയര്‍ഫോക്സ് ബീറ്റാ ആണോ ഉപയോഗിയ്ക്കുന്നതു്? <a href="%">ഉടന്‍ ലഭ്യമാക്കി</a> ഏറ്റവും പുതിയ വിശേഷതകള്‍ പരീക്ഷിയ്ക്കുക.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+ഏറ്റവും പുതിയ ഫയര്‍ഫോക്സ് ബീറ്റാ ഉപയോഗിയ്ക്കുന്നില്ല? <a href="%">ഉടന്‍ ലഭ്യമാക്കി</a> അടുത്ത പതിപ്പില്‍ എന്തെന്നു് കണ്ടറിയുക.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+നിങ്ങളുടെ അഭിപ്രായം മറ്റുള്ളവരെ അറിയിയ്ക്കണമോ? ഫയര്‍ഫോക്സിന്റെ അടുത്ത പതിപ്പു് ഇനിയും കൂടുതല്‍ മെച്ചപ്പെടുത്തുന്നതു് <a href="%">എങ്ങനെ എന്നു് കണ്ടുപിടിയ്ക്കുക</a>.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+ഫയര്‍ഫോക്സ് ബീറ്റാ ഉപയോക്താക്കള്‍: അടുത്ത പതിപ്പില്‍ മാറ്റങ്ങള്‍ വരുത്തുന്നതിനായി <a href="%">നിങ്ങളുടെ അഭിപ്രായം അറിയിയ്ക്കുക</a>.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+ഫയര്‍ഫോക്സിന്റെ അടുത്ത പതിപ്പു് മെച്ചപ്പെടുത്തുന്നതിനായി സഹായിയ്ക്കുക. <a href="%">ഫയര്‍ഫോക്സിന്റെ ഭാഗമായി</a> ഫയര്‍ഫോക്സ് ബീറ്റയെപ്പറ്റി നിങ്ങളുടെ കൂട്ടുകാരെ അറിയിയ്ക്കുക.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+പുറത്തിറങ്ങുന്ന ഫയര്‍ഫോക്സ് വിശേഷകതകള്‍ കാണുവാന്‍ കൂട്ടുകാരെ ക്ഷണിയ്ക്കുക. <a href="%">ഫയര്‍ഫോക്സിന്റെ ഭാഗമായി</a> ഫയര്‍ഫോക്സ് അറോറാ ഇന്നു് തന്നെ മറ്റുള്ളവരുമായി പങ്കിടുക.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+അനവധി കമ്പ്യൂട്ടറുകളില്‍ ഫയര്‍ഫോക്സ് ഉപയോഗിയ്ക്കുന്നുവോ? ഇനി മുതല്‍ നിങ്ങളുടെ ആഡ്-ഓണുകള്‍ സിന്‍ക്രൊണൈസ് ചെയ്യാം. <a href="%">സിന്‍ക് എങ്ങനെ സജീവമാക്കണമെന്നു് കണ്ടുപിടിയ്ക്കുക.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+<a %s>ആന്‍ഡ്രോയിഡിനുള്ള ഫയര്‍ഫോക്സില്‍ ഒരു പ്രധാന പരിഷ്കരണം വന്നിരിയ്ക്കുന്നു</a>, ഉടന്‍ ലഭ്യമാക്കൂ. എല്ലാവരേയും അറിയിയ്ക്കുന്നതിനു് സഹായിയ്ക്കുക.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+നിങ്ങളുടെ ഓരോ ജോലികളും എളുപ്പിത്തിലാക്കുന്നതിനുള്ള പുതിയ വിശേഷതകള്‍ ഫയര്‍ഫോക്സ് ലഭ്യമാക്കുന്നു! <a href="%">കൂടുതല്‍ അറിയുന്നതിനായി വീഡിയോ കാണുക.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+ഫയര്‍ഫോക്സ് ബീറ്റാ ഇഷ്ടമാണോ? ഫയര്‍ഫോക്സില്‍ വരുന്ന പുതിയ മാറ്റം കാണുന്നതിനായി <a href="%s">കൂട്ടുകാരം ക്ഷണിയ്ക്കുക</a>.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+ഫയര്‍ഫോക്സിലേക്കുള്ള പുതിയ വിശേഷതകള്‍ കാണുന്നതിനായി ഫയര്‍ഫോക്സ് ബീറ്റാ ഉപയോഗിയ്ക്കുന്നു. <a href="%s">കണ്ടുനോക്കുക</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+ഫയര്‍ഫോക്സ് കൂടുതല്‍ മെച്ചപ്പെടുത്തുവാന്‍ ഫയര്‍ഫോക്സ് ബീറ്റാ ഉപയോഗിച്ചതിനു് നന്ദി. <a href="%s">നിങ്ങളുടെ കൂട്ടുകാരെയും അറിയിയ്ക്കുക</a>.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+ഏറ്റവും പുതിയ വിശേഷതകള്‍ പരീക്ഷിയ്ക്കുന്നതിനായി ഞാന്‍ ഫയര്‍ഫോക്സ് ബീറ്റാ പരീക്ഷിയ്ക്കുന്നു. <a href="%s">ശ്രമിച്ചു നോക്കുക</a>.
 
 
