--- a/ml/download.lang
+++ b/ml/download.lang
@@ -1,21 +1,21 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
+മോസില്ലാ ഫയര്‍ഫോക്സ് സൌജന്യമായൊരു വെബ് ബ്രൌസറാകുന്നു. വെബിനു് ഏറ്റവും ഉചിതമായ രീതിയില്‍ ഏവര്‍ക്കും ഉപയോഗിയ്ക്കുവാന്‍ സാധ്യമാകുന്ന രീതിയില്‍ ഇതു് തയ്യാറാക്കിയിരിയ്ക്കുന്നു.
 
 
 ;Different by Design
-Different by Design
+ശൈലിയില്‍ വ്യത്യാസമുള്ളതു്
 
 
 ;Proudly <span>non-profit</span>
-Proudly <span>non-profit</span>
+ശരിയ്ക്കും <span>നോണ്‍-പ്രോഫിറ്റ്</span>
 
 
 ;Innovating <span>for you</span>
-Innovating <span>for you</span>
+<span>നിങ്ങള്‍ക്കു് വേണ്ടി</span> കണ്ടുപിടിയ്ക്കുന്നു
 
 
 ;Fast, flexible, <span>secure</span>
-Fast, flexible, <span>secure</span>
+വേഗവും, ഉചിതവും, <span>സുരക്ഷിതവും</span>
 
 
 ;Thanks for choosing Firefox!
@@ -27,14 +27,14 @@ Fast, flexible, <span>secure</span>
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
-As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
+നോണ്‍-പ്രോഫിറ്റ് ആയതിനാല്‍, നിങ്ങള്‍ക്കുചിതമായതു് കണ്ടുപിടിയ്ക്കുവാന്‍ ഞങ്ങള്‍ക്കു് സാധ്യമാകുന്നു. ഈ മാറ്റം നിങ്ങള്‍ക്കിഷ്ടമാകുന്നതാണു്.
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-Welcome to the only browser <em>that puts you first.</em>
+<em>നിങ്ങള്‍ക്കു് പ്രാധാന്യം നല്‍കുന്നു</em> ഏക ബ്രൌസറിലേക്കു് സ്വാഗതം.
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+മോസില്ലാ ഫയര്‍ഫോക്സ് വെബ് ബ്രൌസര്‍
 
 
