l10n: new subtitles translated for marketplace videos
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106855 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/videos/video_teambox.lang
+++ b/pt-BR/videos/video_teambox.lang
@@ -1,103 +1,77 @@
 ;Your apps on all your devices
-Your apps on all your devices
-
+Seus aplicativos em todos os seus aparelhos
 
 ;Teambox is an online collaboration software that can be hosted in the cloud or onsite
-Teambox is an online collaboration software that can be hosted in the cloud or onsite
-
+Teambox é um programa de colaboração on-line que pode ser hospedado na nuvem ou no seu site
 
 ;that allows teams of any size to collaborate more efficiently,
-that allows teams of any size to collaborate more efficiently,
-
+e que permite que equipes de qualquer tamanho trabalhem juntas melhor,
 
 ;communicate with each other, share files and manage tasks.
-communicate with each other, share files and manage tasks.
-
+comuniquem-se entre si, compartilhem arquivos e gerenciem tarefas.
 
 ;We’re fortunate enough to have customers all over the world
-We’re fortunate enough to have customers all over the world
-
+Nós temos a sorte de termos clientes de todo o mundo
 
 ;and using HTML5 we know that we can deliver a consistent user experience
-and using HTML5 we know that we can deliver a consistent user experience
-
+e usando HTML5 nós sabemos que podemos fornecer uma experiência consistente
 
 ;to those customers anywhere they are, no matter what device they are using.
-to those customers anywhere they are, no matter what device they are using.
-
+para clientes em qualquer lugar, indiferente do dispositivo que estivererm usando.
 
 ;There is actually one customer that’s coming to mind called iBolt
-There is actually one customer that’s coming to mind called iBolt
-
+Na verdade há um cliente que me vem à mente chamado iBolt
 
 ;and they manufacture wireless accessories all over the world.
-and they manufacture wireless accessories all over the world.
-
+e eles fabricam acessórios sem fio no mundo todo.
 
 ;All of them are on different devices, some of them are using phones
-All of them are on different devices, some of them are using phones
-
+Todos eles usam dispositivos diferentes; alguns usam telefones
 
 ;some are on tablets, some are on the desktop,
-some are on tablets, some are on the desktop,
-
+alguns estão em tablest, outros em computadores,
 
 ;but we know that all of them have a consistent and great user experience using HTML5
-but we know that all of them have a consistent and great user experience using HTML5
-
+mas nós sabemos que todos terão uma experiência ótima e consistente usando HTML5
 
 ;and that gives us a lot of assurance as a software developer.
-and that gives us a lot of assurance as a software developer.
-
+e isso nos dá uma grande segurança como desenvolvedores de software.
 
 ;Obviously we could build native applications, but doing so,
-Obviously we could build native applications, but doing so,
-
+Obviamente nós poderíamos criar aplicativos nativos, mas isso
 
 ;for a small fast-growing company like us,
-for a small fast-growing company like us,
-
+para uma pequena empresa em grande crescimento como nós
 
 ;takes a lot of time, a lot of extra money and
-takes a lot of time, a lot of extra money and
-
+leva muito tempo, muito dinheiro extra e tem impacto
 
 ;it impacts our ability to deliver a great app to market sooner.
-it impacts our ability to deliver a great app to market sooner.
-
+na nossa habilidade de entregar um ótimo aplicativo ao mercado mais cedo.
 
 ;So we made the decision not to build native apps
-So we made the decision not to build native apps
-
+Então tomamos a decisão de não criar aplicativos nativos
 
 ;and we’re using technologies like HTML5 to get to market faster
-and we’re using technologies like HTML5 to get to market faster
-
+e estamos usando tecnologias como o HTML5 para chegar mais rápido ao mercado
 
 ;with better products and ultimately to deliver a better user experience for our customers.
-with better products and ultimately to deliver a better user experience for our customers.
-
+com produtos melhores e para fornecer uma experiência melhor aos nossos clientes.
 
 ;Quite frankly we see it as a terrific onramp for our business
-Quite frankly we see it as a terrific onramp for our business
-
+Francamente, nós vemos isso como uma excelente rampa de acesso para o nosso negócio
 
 ;Already today we see almost 1,000 signups a day without the Mozilla Marketplace
-Already today we see almost 1,000 signups a day without the Mozilla Marketplace
-
+Hoje nós já temos quase 1.000 acessos por dia sem o Mozilla Marketplace
 
 ;and we can’t even imagine how many we can possibly get through that Marketplace.
-and we can’t even imagine how many we can possibly get through that Marketplace.
-
+e não podemos nem imaginar quantos nós poderíamos alcançar pelo Marketplace.
 
 ;So we see it as a tremendous opportunity.
-So we see it as a tremendous opportunity.
-
+Então nós encaramos como uma grande oportunidade.
 
 ;Something that gives us more visibility, more cachet in the market
-Something that gives us more visibility, more cachet in the market
-
+Algo que nos dá mais visibilidade, mais prestígio no mercado
 
 ;and we’re really excited about it, we’re looking forward to it.
-and we’re really excited about it, we’re looking forward to it.
-
+e nós estamos muito empolgados e mal podemos esperar.
