--- a/pt-BR/videos/video_box.lang
+++ b/pt-BR/videos/video_box.lang
@@ -1,103 +1,77 @@
-
 ;Your apps on all your devices
-Your apps on all your devices
-
+Seus aplicativos em todos os seus aparelhos
 
 ;box is an enterprise content management solution.
-Box is an enterprise content management solution.
-
+box é uma solução corporativa de gerenciamento de conteúdo.
 
 ;Basically the simplest way for business users
-Basically the simplest way for business users
-
+É basicamente a maneira mais simples para usuários corporativos
 
 ;to manage, share and access content that they care about
-to manage, share and access content that they care about
-
+gerenciarem, compartilharem e acessarem conteúdos pertinentes
 
 ;on any device be it a mobile device, a tablet or their desktop.
-on any device be it a mobile device, a tablet or their desktop.
-
+em qualquer dispositivo, seja no telefone, tablet ou computador.
 
 ;When you think about features that enterprises need
-When you think about features that enterprises need
-
+Quando você pensa nos recursos que as empresas precisam
 
 ;such as security, sharing, permissions, administration
-such as security, sharing, permissions, administration
-
+como segurança, compartilhamento, permissões, administração
 
 ;and overall admin management over what content is being shared by whom and where.
-and overall admin management over what content is being shared by whom and where.
-
+e gerenciamento administrativo sobre todo o conteúdo sendo compartilhado por quem e onde.
 
 ;These are things that we have, by design, baked into our product
-These are things that we have, by design, baked into our product
-
+Esses são recursos que nós temos, desde o projeto, inclusos no produto
 
 ;and that is really something that sets us apart in the marketplace.
-and that is really something that sets us apart in the marketplace.
-
+e é algo que realmente nos diferencia no mercado.
 
 ;While still providing the simplicity and ease of use
-While still providing the simplicity and ease of use
-
+Ao mesmo tempo que oferecemos a simplicidade e facilidade de uso
 
 ;that you would expect out of a consumer solution.
-that you would expect out of a consumer solution.
-
+que você esperaria de uma solução para o usuário final.
 
 ;At its very core, our product is a web product, so porting it into HTML5
-At its very core, our product is a web product, so porting it into HTML5
-
+No seu núcleo, o nosso produto é uma aplicação web, então portá-la para HTML5
 
 ;was just adding on a couple of extra things to it.
-was just adding on a couple of extra things to it.
-
+foi simples, bastando adicionar algumas coisas extras.
 
 ;Since we have adopted HTML5 technology both for our web product and for our default mobile page,
-Since we have adopted HTML5 technology both for our web product and for our default mobile page,
-
+Desde que adotamos a tecnologia HTML5 para nosso produto web e também na nossa página para dispositivos móveis,
 
 ;so that our web page can work by default on any device,
-so that our web page can work by default on any device,
-
+para que nossa página da web funcione em qualquer aparelho,
 
 ;we have invested in a unique Android application and a unique iPhone application
-we have invested in a unique Android application and a unique iPhone application
-
+nós investimos em um aplicativo para Android e outro para iPhone
 
 ;but we still have a one-size-fits-all web page for all mobile devices in general.
-but we still have a one-size-fits-all web page for all mobile devices in general.
-
+mas ainda temos uma página compatível com todos os dispositivos móveis em geral.
 
 ;What was really interesting for us with working with Mozilla and the Marketplace
-What was really interesting for us with working with Mozilla and the Marketplace
-
+Foi realmente interessante trabalhar com a Mozilla e o Marketplace
 
 ;is offering our service to the people who need it in the form that they need it.
-is offering our service to the people who need it in the form that they need it.
-
+oferece nosso serviço para pessoas que precisam dele na forma que eles precisam.
 
 ;We are aware that Mozilla does also have quite a few users and its always been official
-We are aware that Mozilla does also have quite a few users and its always been official
-
+Estamos cientes de que a Mozilla possui alguns usuários e sempre foi aberta a parcerias
 
 ;to get your brand and get your name out there in a marketplace with hundreds of millions of perspectives.
-to get your brand and get your name out there in a marketplace with hundreds of millions of perspectives.
-
+para pegar a sua marca e nome e oferecê-los em um mercado com centenas de milhões de perspectivas.
 
 ;Once we read through the documentation it really was just a matter of minutes before we were able to take
-Once we read through the documentation it really was just a matter of minutes before we were able to take
-
+Após ler a documentação, foi realmente uma questão de minutos antes de podermos adaptar
 
 ;our web page and our mobile page, both of which had already included HTML5 technology,
-our web page and our mobile page, both of which had already included HTML5 technology,
-
+nosso cliente web e nossa página móvel, que já incluíam a tecnologia HTML5,
 
 ;and create an installer for the Mozilla App Store.
-and create an installer for the Mozilla App Store.
-
+e criar um instalador para a loja de aplicativos da Mozilla.
 
 ;distribute your apps
-distribute your apps
+distribua seus aplicativos
