--- a/pt-BR/videos/video_teambox.lang
+++ b/pt-BR/videos/video_teambox.lang
@@ -17,7 +17,7 @@ Nós temos a sorte de termos clientes de todo o mundo
 e usando HTML5 nós sabemos que podemos fornecer uma experiência consistente
 
 ;to those customers anywhere they are, no matter what device they are using.
-para clientes em qualquer lugar, indiferente do dispositivo que estivererm usando.
+para clientes em qualquer lugar, indiferente do dispositivo que estiverem usando.
 
 ;There is actually one customer that’s coming to mind called iBolt
 Na verdade há um cliente que me vem à mente chamado iBolt
