l10n: ml, translation updates bhy Ani Peter
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106866 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ml/newsletter.lang
+++ b/ml/newsletter.lang
@@ -2,194 +2,194 @@
 
 
 ;Get Monthly News
-Get Monthly News
+ഓരോ മാസവും വിവരങ്ങള്‍ ലഭ്യമാക്കുക
 
 
 ;Your Email Address
-Your Email Address
+നിങ്ങളുടെ ഈമെയില്‍ വിലാസം
 
 
 ;Text
-Text
+വാചകം
 
 
 ;Available Languages
-Available Languages
+ലഭ്യമായ ഭാഷകള്‍
 
 
 ;Select country
-Select country
+രാജ്യം തെരഞ്ഞെടുക്കുക
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+നല്‍കിയ ഈമെയില്‍ വിലാസം ശരിയെന്നു് ഉറപ്പു് വരുത്തുക!
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+ദയവായി മോസിലയുടെ സ്വകാര്യ പോളിസി വായിച്ചു്, സമ്മതം അറിയിയ്ക്കുന്നതിനായി ബോക്സ് ടിക്ക് ചെയ്യുക.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
+<a href="%s">സ്വകാര്യ പോളിസിയുമായി</a> യോജിയ്ക്കുന്നു
 
 
 ;Sign me up!
-Sign me up!
+പങ്കു് ചേരുക!
 
 
 ;We will only send you Mozilla-related information.
-We will only send you Mozilla-related information.
+മോസില്ലാ സംബന്ധിച്ചുള്ള വിവരങ്ങള്‍ മാത്രമേ ഞങ്ങള്‍ അയച്ചു് തരൂ.
 
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
+സബ്സ്ക്രൈബ് ചെയ്തതിനു് നന്ദി!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
+നിങ്ങള്‍ക്കുടന്‍ തന്നെ ഫയര്‍ഫോക്സിന്റെ ഏറ്റവും പുതിയ വിശേഷതകളെപ്പറ്റിയുള്ള ഈമെയില്‍ വഴി ലഭ്യമാകുന്നു.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+എല്ലാ മാസവുമുള്ള പരിഷ്കരങ്ങള്‍ക്കും ഏറ്റവും പുതിയ മോസില്ലാ വാര്‍ത്തകള്‍ക്കും സബ്സ്ക്രൈബ് ചെയ്യുക. ഫയര്‍ഫോക്സ് ബ്രൌസറിന്റെ ഏറ്റവും പുതിയ വിശേഷതകളും നിങ്ങള്‍ക്കു് ലഭ്യമാകുന്നു. 
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+ഈമെയില്‍ മുഖേന നിങ്ങള്‍ക്കു് ഉറപ്പാക്കുന്നതിനുള്ള സന്ദേശം അയച്ചിരിയ്ക്കുന്നു. ഈമെയിലില്‍ ലഭ്യമാക്കിയിരിയ്ക്കുന്ന കണ്ണിയില്‍ പ്രവേശിച്ചു് ഈ മെയിലിങ് ലിസ്റ്റിലേക്കുള്ള സബ്സ്ക്രിപ്ഷന്‍ ഉറപ്പാക്കുക.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+എല്ലാ വിവരങ്ങളും <span>വാര്‍ത്താപത്രികയില്‍</span> വായിച്ചറിയുക.
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+നിങ്ങളുടെ വാര്‍ത്താപത്രികയിലേക്കുള്ള സബ്സ്ക്രിപ്ഷന്‍ ഉറപ്പാക്കിയിരിയ്ക്കുന്നു.
 
 
 ;Format
-Format
+ശൈലി
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+നിങ്ങള്‍ തയ്യാറാണു്! <span>പക്ഷേ കാത്തിരിയ്ക്കുക, അല്‍പം കൂടിയുണ്ടു്</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+ഏറ്റവും പ്രധാനപ്പെട്ട വിവരം ആവശ്യമാണോ? നിങ്ങളെപ്പറ്റി കൂടുതല്‍ വിവരങ്ങള്‍ ഞങ്ങളുമായി പങ്കു് വയ്ക്കുക. കൂടുതല്‍ മോസില്ലാ വാര്‍ത്തകള്‍ക്കായി ഇവിടെ പങ്കു് ചേരുക.
 
 
 ;Firefox & You
-Firefox & You
+ഫയര്‍ഫോക്സും നിങ്ങളും
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+ഞങ്ങളുടെ മറ്റു് വാര്‍ത്തപത്രികകള്‍:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+നിങ്ങളുടെ പ്രിയപ്പെട്ട ബ്രൌസറിന്റെ ഏറ്റവും പുതിയ വിശേഷതകള്‍ ലഭ്യമാക്കുക.
 
 
 ;Firefox Mobile
-Firefox Mobile
+ഫയര്‍ഫോക്സ് മൊബൈല്‍
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+ഫയര്‍ഫോക്സ് മൊബൈലിനുള്ള ഏറ്റവും പുതിയ ആഡ്-ഓണുകളും വിശേഷതകളും അറിയുക.
 
 
 ;Beta News
-Beta News
+ബീറ്റാ വാര്‍ത്തകള്‍
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+ഏറ്റവും ഒടുവിലുള്ള പതിപ്പിനു് മുമ്പുള്ള ഫയര്‍ഫോക്സ് പണിയിടത്തിന്റെയും മൊബൈലിന്റെയും ഏറ്റവും പുതിയ വിശേഷതകള്‍ വായിച്ചറിയുക.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+നമുക്കു് കൂട്ടുകാരാകാം!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+നിങ്ങളുടെ പ്രിയപ്പെട്ട സോഷ്യല്‍ നെറ്റ്‌വര്‍ക്കിങ് സൈറ്റുകളിലൊന്നാണു് ഫയര്‍ഫോക്സ്. ഞങ്ങളുമായി കണക്ട് ചെയ്തു് സംവാദങ്ങളില്‍ പങ്കു് ചേരുക.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+നിങ്ങളുടെ <span>വാര്‍ത്താപത്രികകള്‍ക്കുള്ള സബ്സ്ക്രിപ്ഷനുകള്‍</span> കൈകാര്യം ചെയ്യുക
 
 
 ;Subscribe
-Subscribe
+സബ്സ്ക്രൈബ് ചെയ്യുക
 
 
 ;Unsubscribe
-Unsubscribe
+അണ്‍സബ്സ്ക്രൈബ് ചെയ്യുക
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+എല്ലാ മോസില്ലാ ഈമെയിലുകളില്‍ നിന്നും നീക്കം ചെയ്യണമെങ്കില്‍ ഇവിടെ ടിക്ക് ചെയ്യുക
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+എല്ലാ മോസില്ലാ ഈമെയിലുകളില്‍ നിന്നും എന്നെ നീക്കം ചെയ്യുക
 
 
 ;Save Preferences
-Save Preferences
+വിശേഷതകള്‍ സൂക്ഷിയ്ക്കുക
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+നിങ്ങളുടെ ഈമെയില്‍ വിശേഷതകള്‍ പരിഷ്കരിയ്ക്കുന്നതിനു് നന്ദി.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+നിങ്ങള്‍ സബ്സ്ക്രൈബ് ചെയ്തിരിയ്ക്കുന്നു.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+നിങ്ങള്‍ പോകുന്നതില്‍ ഞങ്ങള്‍ക്കു് വിഷമമുണ്ടു്. കാരണം ദയവായി പറയാമോ?
 
 
 ;You send too many emails.
-You send too many emails.
+നിങ്ങളുടെ ഒരുപാടു് ഈമെയില്‍ അയച്ചിരിയ്ക്കുന്നു.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+നിങ്ങളുടെ ഉള്ളടക്കം എനിക്കു് പ്രയോജനമുള്ളതല്ല.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+നിങ്ങളുടെ ഈമെയില്‍ ശൈലി മനസ്സിലാക്കുവാന്‍ സാധ്യമല്ല.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+ഇതിനു് വേണ്ടിയല്ല ഞാന്‍ അംഗമായതു്.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+മോസില്ലയുമായി ഞാന്‍ ഫെയിസ്ബുക്കിലും ട്വിറ്ററിലും ബന്ധപ്പെടുന്നു.
 
 
 ;Submit
-Submit
+സമര്‍പ്പിയ്ക്കുക
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+നിങ്ങള്‍ വിട്ടുപോകുന്നതിന്റെ കാരണം ദയവായി പറയുക.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+മോസില്ലാ വാര്‍ത്താപത്രികകള്‍
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+നന്ദി! നിങ്ങളുടെ സബ്സ്ക്രിപ്ഷന്‍ ഉറപ്പാക്കുന്നതിനായി ഇന്‍ബോക്സ് പരിശോധിയ്ക്കുക.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+നിങ്ങളുടെ സബ്സ്ക്രിപ്ഷന്‍ ഉറപ്പാക്കുന്നതിനായി mozilla@e.mozilla.org-ല്‍ നിന്നും നിങ്ങള്‍ക്കു് ഈമെയില്‍ ലഭിയ്ക്കുന്നതാണു്. ഇന്‍ബോക്സില്‍ കണ്ടില്ലെങ്കില്‍ സ്പാം ഫില്‍റ്റര്‍ പരിശോധിയ്ക്കുക. ഞങ്ങളുടെ വാര്‍ത്താപത്രികകള്‍ ലഭിയ്ക്കുന്നതിനായി നിങ്ങളുടെ സബ്സ്ക്രിപ്ഷന്‍ ഉറപ്പാക്കേണ്ടതുണ്ടു്.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+നിങ്ങളിലേക്കു് ഉറപ്പായും വിവരങ്ങള്‍ എത്തിയ്ക്കുന്നതിനു് ദയവായി ഞങ്ങളുടെ ഈമെയില്‍ വിലാസം: mozilla@e.mozilla.org നിങ്ങളുടെ വിലാസപുസ്തകത്തിലേക്കു് ചേര്‍ക്കുക.
 
 
