--- a/ml/videos/video_fx13.lang
+++ b/ml/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[ഫയര്‍ഫോക്സിലെ പുതിയ വിശേഷതകള്‍] ഏറ്റവും പുതിയ ഫയര്‍ഫോക്സ് നിങ്ങളെ എന്തിനും ഏതിനും എളുപ്പത്തില്‍ സഹായിയ്ക്കുന്നു.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+മെച്ചപ്പെടുത്തിയ ആസ്ഥാന താളില്‍ നിങ്ങള്‍ക്കു് സാധാരണ ആവശ്യമായ മെനു ഐച്ഛികങ്ങള്‍ എളുപ്പത്തില്‍ ലഭ്യമാക്കുന്നു.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+ഉദാഹരണത്തിനു്, ഡൌണ്‍ലോഡുകള്‍, അടയാളക്കുറിപ്പുകള്‍, നാള്‍വഴി, ആഡ്-ഓണുകള്‍, സിന്‍ക്, സജ്ജീകരണങ്ങള്‍.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[പുതിയ റ്റാബ് താള്‍] നിങ്ങളുടെ പുതിയ റ്റാബ് താളിലേക്കും ചില പുതിയ വിശേഷതകള്‍ ചേര്‍ത്തിരിയ്ക്കുന്നു.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+പുതിയ റ്റാബ് താളില്‍ നിന്നും, നിങ്ങള്‍ക്കു് ഒറ്റ ക്ലിക്കില്‍ ഏറ്റവും കൂടുതലും അവസാനമായും ഉപയോഗിച്ച വെബ്സൈറ്റുകളിലേക്കു് എളുപ്പത്തില്‍ എത്താം.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+പുതിയ റ്റാബ് താള്‍ ഉപയോഗിച്ചു് തുടങ്ങുന്നതിനായി, ബ്രൌസറിന്റെ മുകളിലുള്ള '+' ക്ലിക്ക് ചെയ്തു് പുതിയ റ്റാബ് ലഭ്യമാക്കുക.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+ഔസം ബാര്‍ നാള്‍വഴിയില്‍ നിന്നും ഏറ്റവും കൂടുതലും അവസാനമായും ഉപയോഗിച്ച വെബ്സൈറ്റുകളുടെ തംബ്നെയിലുകള്‍ പുതിയ റ്റാബ് താളില്‍ കാണാം.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+ഈ തംബ്നെയിലുകള്‍ ഉപയോഗിച്ചു് പുതിയ റ്റാബ് താളില്‍ ഇവയുടെ ക്രമം മാറ്റുവാന്‍ സാധിയ്ക്കുന്നു.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+ഒരിടത്തു് സൈറ്റ് സ്ഥാപിയ്ക്കുന്നതിനായി പുഷ്പിന്‍ ക്ലിക്ക് ചെയ്യുക അല്ലെങ്കില്‍ സൈറ്റ് നീക്കം ചെയ്യുന്നതിനായി 'X' ബട്ടണ്‍ അമര്‍ത്തുക.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+തിരികെ പുതിയ റ്റാബ് താളിലേക്കു് പോകുന്നതിനായി താളിന്റെ മുകളില്‍ വലത്തുള്ള 'ഗ്രിഡ്' ചിഹ്നം ക്ലിക്ക് ചെയ്യാവുന്നതാണു്.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+ഉടന്‍ പുതിയ ഫയര്‍ഫോക്സ് ലഭ്യമാക്കി, ഈ പുതിയ വിശേഷതകള്‍ ഇന്നും മുതല്‍ ഉപയോഗിച്ചു് തുടങ്ങുക!
