--- a/ml/whatsnew.lang
+++ b/ml/whatsnew.lang
@@ -2,62 +2,61 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+അടിപോളി!ഫയര്‍ഫോക്സ് പുതുക്കിയിരിയ്ക്കുന്നു.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+നിങ്ങളുടെ ഫയര്‍ഫോക്സ് പഴയതാണു്.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+സുരക്ഷാ കാരണങ്ങളാല്‍,<a href="{url}">ഏറ്റവും പുതിയതും വലിതുമായ പതിപ്പിലേക്കു്</a> പരിഷ്കരിയ്ക്കുന്നതാണു് ഉത്തമം.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+നിങ്ങളുടെ ഇപ്പോള്‍ ഉപയോഗിയ്ക്കുന്നതു് ഫയര്‍ഫോക്സിന്റെ അപരിചികമായൊരു പതിപ്പാണു്.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+സുരക്ഷാ കാരണങ്ങളാല്‍, <a href="{url}">lഏറ്റവും പുതിയതും വലിതുമായ പതിപ്പിലേക്കു്</a> ഡൌണ്‍ലോഡ് ചെയ്യുന്നതാണു് ഉത്തമം.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+നിങ്ങളുടെ ഒരോ പണികളും<br/>മുമ്പത്തതിലും വേഗത്തില്‍ നടപ്പിലാക്കുക
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+ഫയര്‍ഫോക്സ് സഹായത്തിലുള്ള പുതിയ വിശേഷതകള്‍ എങ്ങനെ നിങ്ങളെ ബ്രൌസിങിനു് സഹായിയ്ക്കുന്നു എന്നു് കാണുക.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">പുതിയ റ്റാബ് വിശേഷത »</a> കാണുക
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+<a href="{url}">പുതുതായി തയ്യാറാക്കിയ ആസ്ഥാന താള്‍ »</a> കാണുക
 
 
 ;Keep in touch
-Keep in touch
+എപ്പോഴും ബന്ധപ്പെടുക
 
 
 ;Keep it moving
-Keep it moving
+മുമ്പോട്ട് തുടരുക
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+ഫയര്‍ഫോക്സ് ലഭ്യമാക്കുക » <b>ആന്‍ഡ്രോയിഡിനുള്ളതു്</b>
 
 
 ;Keep it going
-Keep it going
+മുന്നേറുക
 
 
 ;Join Mozilla
-Join Mozilla
+മോസിലയില്‍ പങ്ക്ചേരുക
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
+<a href="%s">ഗൂഗിള്‍ പങ്കിട്ടതും</a> തയ്യാറാക്കിയതുമായ പ്രവര്‍ത്തിയില്‍ നിന്നും ആന്‍ഡ്രോയിഡ് റോബോട്ട് മെച്ചപ്പെടുത്തിയിരിയ്ക്കുന്നു. <a href="%s">ക്രിയേറ്റീവ് കോമ്മണ്‍സ് 3.0 ആട്രിബ്യൂഷന്‍ ലൈസന്‍സ്</a> അനുസരിച്ചാണു് ഇതിന്റെ ഉപയോഗം.
 
