l10n: ml, snippets.lang update by Ani Peter
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106868 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ml/snippets.lang
+++ b/ml/snippets.lang
@@ -30,11 +30,11 @@
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+ഫയര്‍ഫോക്സ് ഒരു നോണ്‍-പ്രോഫിറ്റ് സ്ഥാപനമാകുന്നു, അതു് കൊണ്ടു് തന്നെ നിങ്ങളുടെ ആവശ്യങ്ങള്‍ സന്തോഷം നിറവേറ്റുന്നു. ഞങ്ങളുടെ ലക്ഷ്യത്തെപ്പറ്റി <a href="%s">കൂടുതല്‍ അറിയുക</a>.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+വേഗതയും, ഉചിതവും, സുരക്ഷിതവുമായ ഫയര്‍ഫോക്സ്, മറ്റെന്തിനേക്കാള്‍ നിങ്ങള്‍ക്കു് പ്രധാന്യം നല്‍കുന്നു. മറ്റുള്ളവരില്‍ നിന്നും ഞങ്ങള്‍ എങ്ങനെ വ്യത്യസ്ഥരെന്നു് <a href="%s">അറിയുക</a>.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
@@ -74,7 +74,7 @@ Fast, flexible and secure, Firefox is the only browser that puts you first. <a h
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
+ടാബ്ലറ്റുകളില്‍ എന്ന പോലെ നിങ്ങള്‍ക്കിപ്പോള്‍ ആന്‍ഡ്രോയിഡിലും ഫയര്‍ഫോക്സ് ഉപയോഗിയ്ക്കാം. <a href="%s">നിങ്ങളുടെ വിരല്‍തുമ്പില്‍ വെബില്‍ ഏറ്റവും ശക്തമായ പ്രയോഗം ലഭ്യമാക്കുക</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
